fix: update test and findById method